# Dpoint_Trader

./: .flake8  .gitignore  BASKET_DATE_RANGE_UPDATE.md  BUG_FIX_COMPLETE.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  FIXES.md  GPU_CPU_OPTIMIZATION.md  MIXED_PRECISION_OPTIMIZATION.md  OPTIMIZATION_COMPLETE.md  PROJECT_STATUS_SUMMARY.md  README.md  README_Chinese_ver.md  REFACTOR_LOG.md  SCHEME_C_FINAL_REPORT.md  backtester.py  compare_runs.py  constants.py  data_loader.py  feature_dpoint.py  main_cli.py  models.py  portfolio_backtester.py  pyproject.toml  pytest.ini  reporter.py  requirements.txt  rolling_trainer.py  trainer.py  utils.py
.github/workflows/: ci.yml
docs/: DATA.md  LEGACY_PROJECTS.md  LINEAGE.md  REFACTORING_RATIONALE.md
gui/: app.py  state.py  utils.py
gui/components/: charts.py  config_forms.py  layout.py  log_panel.py
gui/pages/: compare.py  dashboard.py  experiments.py  fetch.py  results.py  resume.py  run_basket.py  run_single.py
scripts/: build_industry_db.py
src/dpoint/: __init__.py  gui_launcher.py
src/dpoint/cli/: main.py
tests/: TEST_CLEANUP_LOG.md  __init__.py  conftest.py  test_analysis.py  test_backtester.py  test_backtester_market_state.py  test_cleaner.py  test_cli.py  test_conda_env.py  test_execution.py  test_features.py  test_fee_lot.py  test_fetch.py  test_imports.py  test_industry.py  test_metrics.py  test_models.py  test_no_leakage.py  test_optional_torch_runtime.py  test_rejection.py  test_report.py  test_reports.py  test_reproducibility.py  test_search_integration.py  test_splits.py  test_splitter.py  test_tools.py
(+44 files in other folders)
