[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpoint-trader"
version = "0.1.0"
description = "A股深度学习量化交易研究框架 — 支持单股策略和多股因子/组合策略"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "openpyxl>=3.1",
    "XlsxWriter>=3.2",
    "joblib>=1.3",
    "tabulate>=0.9",
]

[project.optional-dependencies]
torch = ["torch>=2.5"]
xgboost = ["xgboost>=2.1"]
explain = ["shap>=0.45"]
plotly = ["plotly>=5.18"]
gui = ["nicegui>=1.4"]
all = [
    "torch>=2.5",
    "xgboost>=2.1",
    "shap>=0.45",
    "plotly>=5.18",
    "nicegui>=1.4",
]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
    "black>=24.0",
    "isort>=5.13",
]

[project.scripts]
dpoint = "dpoint.cli.main:main"
dpoint-gui = "dpoint.gui_launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dpoint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["dpoint"]

[tool.black]
line-length = 100
target-version = ["py310"]
